@@ -38,6 +38,7 @@ import uk.gov.hmcts.reform.et.syaapi.service.pdf.PdfServiceException;
 import uk.gov.hmcts.reform.et.syaapi.utils.TestConstants;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
+import uk.gov.service.notify.SendEmailResponse;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -282,9 +283,10 @@ class CaseServiceTest {
     void shouldAddSupportingDocumentToDocumentCollection() throws CaseDocumentException, PdfServiceException,
         AcasException, InvalidAcasNumbersException {
         when(authTokenGenerator.generate()).thenReturn(TEST_SERVICE_AUTH_TOKEN);
-        when(idamClient.getUserDetails(TEST_SERVICE_AUTH_TOKEN)).thenReturn(new UserDetails(
+        when(idamClient.getUserInfo(TEST_SERVICE_AUTH_TOKEN)).thenReturn(new UserInfo(
+            null,
             USER_ID,
-            testData.getCaseData().getClaimantType().getClaimantEmailAddress(),
+            TEST_NAME,
             testData.getCaseData().getClaimantIndType().getClaimantFirstNames(),
             testData.getCaseData().getClaimantIndType().getClaimantLastName(),
             null
@@ -320,12 +322,12 @@ class CaseServiceTest {
                 "test");
 
         when(pdfService.convertAcasCertificatesToPdfDecodedMultipartFiles(any(), any()))
-            .thenReturn(Arrays.asList(pdfDecodedMultipartFile));
+            .thenReturn(List.of(pdfDecodedMultipartFile));
 
-        when(pdfService.convertCaseDataToPdfDecodedMultipartFile(any()))
-            .thenReturn(pdfDecodedMultipartFile);
+        when(pdfService.convertCaseDataToPdfDecodedMultipartFile(any(), any()))
+            .thenReturn(List.of(pdfDecodedMultipartFile));
 
-        when(acasService.getAcasCertificatesByCaseData(any())).thenReturn(Arrays.asList());
+        when(acasService.getAcasCertificatesByCaseData(any())).thenReturn(List.of());
 
         when(caseDocumentService.uploadAllDocuments(any(), any(), any(), any()))
             .thenReturn(new LinkedList<>());
